second commit after c# dev kit

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,39 @@ MyMvcApp/obj/MyMvcApp.csproj.nuget.g.props
 MyMvcApp/obj/MyMvcApp.csproj.nuget.g.targets
 MyMvcApp/obj/project.assets.json
 MyMvcApp/obj/project.nuget.cache
+MyMvcApp/bin/Debug/net8.0/appsettings.Development.json
+MyMvcApp/bin/Debug/net8.0/appsettings.json
+MyMvcApp/bin/Debug/net8.0/MyMvcApp.deps.json
+MyMvcApp/bin/Debug/net8.0/MyMvcApp.dll
+MyMvcApp/bin/Debug/net8.0/MyMvcApp.exe
+MyMvcApp/bin/Debug/net8.0/MyMvcApp.pdb
+MyMvcApp/bin/Debug/net8.0/MyMvcApp.runtimeconfig.json
+MyMvcApp/bin/Debug/net8.0/MyMvcApp.staticwebassets.runtime.json
+MyMvcApp/obj/Debug/net8.0/.NETCoreApp,Version=v8.0.AssemblyAttributes.cs
+MyMvcApp/obj/Debug/net8.0/apphost.exe
+MyMvcApp/obj/Debug/net8.0/MyMvcApp.AssemblyInfo.cs
+MyMvcApp/obj/Debug/net8.0/MyMvcApp.AssemblyInfoInputs.cache
+MyMvcApp/obj/Debug/net8.0/MyMvcApp.assets.cache
+MyMvcApp/obj/Debug/net8.0/MyMvcApp.csproj.CoreCompileInputs.cache
+MyMvcApp/obj/Debug/net8.0/MyMvcApp.csproj.FileListAbsolute.txt
+MyMvcApp/obj/Debug/net8.0/MyMvcApp.dll
+MyMvcApp/obj/Debug/net8.0/MyMvcApp.GeneratedMSBuildEditorConfig.editorconfig
+MyMvcApp/obj/Debug/net8.0/MyMvcApp.genruntimeconfig.cache
+MyMvcApp/obj/Debug/net8.0/MyMvcApp.GlobalUsings.g.cs
+MyMvcApp/obj/Debug/net8.0/MyMvcApp.MvcApplicationPartsAssemblyInfo.cache
+MyMvcApp/obj/Debug/net8.0/MyMvcApp.pdb
+MyMvcApp/obj/Debug/net8.0/MyMvcApp.RazorAssemblyInfo.cache
+MyMvcApp/obj/Debug/net8.0/MyMvcApp.RazorAssemblyInfo.cs
+MyMvcApp/obj/Debug/net8.0/MyMvcApp.sourcelink.json
+MyMvcApp/obj/Debug/net8.0/staticwebassets.build.json
+MyMvcApp/obj/Debug/net8.0/staticwebassets.development.json
+MyMvcApp/obj/Debug/net8.0/staticwebassets.pack.json
+MyMvcApp/obj/Debug/net8.0/ref/MyMvcApp.dll
+MyMvcApp/obj/Debug/net8.0/refint/MyMvcApp.dll
+MyMvcApp/obj/Debug/net8.0/scopedcss/bundle/MyMvcApp.styles.css
+MyMvcApp/obj/Debug/net8.0/scopedcss/projectbundle/MyMvcApp.bundle.scp.css
+MyMvcApp/obj/Debug/net8.0/scopedcss/Views/Shared/_Layout.cshtml.rz.scp.css
+MyMvcApp/obj/Debug/net8.0/staticwebassets/msbuild.build.MyMvcApp.props
+MyMvcApp/obj/Debug/net8.0/staticwebassets/msbuild.buildMultiTargeting.MyMvcApp.props
+MyMvcApp/obj/Debug/net8.0/staticwebassets/msbuild.buildTransitive.MyMvcApp.props
+MyMvcApp/obj/Debug/net8.0/staticwebassets/msbuild.MyMvcApp.Microsoft.AspNetCore.StaticWebAssets.props
